--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "@tanstack/react-query": "^5.90.19",
     "@tanstack/react-query-devtools": "^5.91.2",
     "axios": "^1.13.2",
+    "clsx": "^2.1.1",
     "cookie": "^1.1.1",
     "next": "16.1.3",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-hot-toast": "^2.6.0",
+    "use-debounce": "^10.1.0",
     "zustand": "^5.0.10"
   },
   "devDependencies": {
